assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap');
/* font-family: 'Rubik', sans-serif; */

:root {
    /* Primary */
    --soft-blue: hsl(231, 69%, 60%);
    --soft-red: hsl(0, 94%, 66%);

    /* Neutral */
    --grayish-blue: hsl(229, 8%, 60%);
    --very-dark-blue: hsl(229, 31%, 21%);
}

/* GENERAL ELEMENTS STYLE */
body {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

section {
    padding: 2rem 1.5rem;
    text-align: center;
    font-family: 'Rubik', sans-serif;
    position: relative;
}

a {
    text-decoration: none !important;
    color: black !important;
}

li {
    list-style: none;
}

/* GENERAL CLASSES STYLE */
.text-wrapper {
    padding: 3.5rem .5rem 2rem;
    max-width: 31.25rem;
    margin: 0 auto;
}

.text-grey {
    font-size: .9rem;
    opacity: .8;
    color: var(--grayish-blue);
    line-height: 1.7rem;
}

/* HOVER EFFECT LINKS */
.hover-effect:hover {
    color: var(--soft-red) !important;
}

/* General style for buttons */
.buttons-div {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 1rem;
}

.buttons {
    border: 2px solid transparent;
    border-radius: 5px;
    padding: .8rem 1.2rem;
    font-size: .8rem;
    background-color: var(--soft-blue);
    color: #fff;
    font-weight: 500;
    margin: 1.5rem 0;
}

.buttons:hover {
    background-color: #fff;
    color: var(--soft-blue);
    border: 2px solid var(--soft-blue);
}

.form-button {
    background-color: var(--soft-red);
    border: 2px solid var(--soft-red);
    color: white;
    font-size: .8rem;
    margin: 0;
}

.form-button:hover {
    color: var(--soft-red) !important;
    border: 2px solid var(--soft-red);

}

/* Buttons and cards box shadow */
.box-shadow {
    box-shadow: rgba(0, 0, 0, 0.10) 0px 5px 15px;
}

/* General rule for list bottom border */
.list-item {
    padding: .80rem 0;
    cursor: pointer;
}

.list-item:not(:last-child) {
    border-bottom: 1px solid rgba(0, 0, 0, 0.128);
}

/* Rules for features tabs, 
show/hide tabs based on selection */
.show {
    display: block;
}

.hide {
    display: none;
}

/* Images styling */
.img-wrapper {
    position: relative;
    width: 100%;
    max-width: 29.25rem;
    margin: 0 auto;
}

.img-wrapper img {
    position: relative;
    width: inherit;
    height: auto;
    z-index: 1;
}

/* Background image style absolute position BANNER */
.blue-background {
    position: absolute;
    background-color: var(--soft-blue);
    width: 110%;
    height: 90%;
    right: -50%;
    bottom: -10%;
    border-radius: 0 0 0 120px;
}

/* Background image style absolute position FEATURES */
.blue-background-features {
    position: absolute;
    background-color: var(--soft-blue);
    width: 120%;
    height: 90%;
    left: -60%;
    bottom: -10%;
    border-radius: 0 0 100px 0;
}

/* NAVBAR */
#navbar {
    display: flex;
    justify-content: space-between;
}

/* Rules for Mobile layout overlay menu */
.links-wrapper {
    display: none;
    height: 100%;
    width: 100%;
    position: fixed;
    z-index: 2;
    top: 0;
    left: 0;
    background-color: var(--very-dark-blue);
    opacity: .9;
    overflow-x: hidden;
    transition: 0.5s;
}

.links-wrapper a {
    padding: 8px;
    font-size: 1.5rem;
    font-weight: normal;
    color: #fff !important;
    display: block;
    transition: 0.3s;
    letter-spacing: 3px;
}

.links-wrapper .social-links {
    position: absolute;
    top: 70%;
    transform: translateY(-50%);
    left: 0;
    right: 0;
}

/* .desktop-menu {
    display: flex;
    align-items: center;
    gap: 2rem;
} */

.links-menu {
    padding: 0 1rem;
    margin: 3rem 0;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    position: relative;
    top: 10%;
    width: 100%;
    text-align: center;
}

.links-menu a {
    opacity: .8;
}

.close-icon {
    position: absolute;
    top: 20px;
    right: 45px;
    font-size: 30px;
}

.overlay-button {
    border: 2px solid #fff;
    background-color: transparent;
    font-size: 1.5rem;
}

.links-menu-desktop {
    display: none;
    align-items: center;
    gap: 2rem;
}

/* BANNER */
/* White background button / Alternative color */
.white-firefox {
    background-color: #f5f0f0;
    color: #000000a3;
}

/* FEATURES */

/* Add top and bottom border to features list */
.feature-list {
    border-top: 1px solid rgba(0, 0, 0, 0.128);
    border-bottom: 1px solid rgba(0, 0, 0, 0.128);
    margin: 2rem 0;
    padding: 0;
}

/* add break lines between features list except last child */
.feature-list.list-item:last-child {
    border-bottom: 0;
}

.list-item a {
    padding: .75rem 0;
}

.active-list {
    border-bottom: 4px solid var(--soft-red);
}

/* PRICING */

.pricing-cards {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.p-card {
    margin: 1rem;
    border-radius: 5%;
    min-width: 260px;
    max-width: 18.125rem;
}

.p-card>.text-wrapper {
    padding: 2rem 0.5rem 0;
}

.p-card>.buttons {
    padding: 0.8rem 3rem;
}

.img-top {
    width: 80px;
    height: 80px;
    margin: 2.5rem 0 0rem;
}

.dots-img {
    width: 100%;
}

/* FAQ */
.faq-questions {
    margin: 0 auto;
    max-width: 31.25rem;
}

.faq-questions>.list-item {
    text-align: left;
    padding-bottom: .5rem;
}

/* Accordion Style Resource: https://wpbeaches.com/create-expandcollapse-faq-accordion-collapse-click/ */
.faq-accordion {
    padding: .5rem 0;
    width: 100%;
    transition: 0.4s;
}

.faq-accordion:after {
    content: '\02795';
    font-size: 0.813rem;
    color: #777;
    float: right;
    margin-left: 5px;
}

.active:after {
    content: "\2796";
}

.faq-panel {
    padding: .5rem 0;
}

/* CONTACT */

#contact {
    background-color: hsl(231, 69%, 60%);
    color: white;
    margin-top: 50px;
}

#contact>p {
    letter-spacing: .3rem;
    font-size: .8rem;
}

.form {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    margin: 1.4rem 0rem;
}

.email-input-wrapper {
    display: flex;
    flex-direction: column;
}

.email-input {
    border: 0;
}

.email-error {
    display: none;
    font-size: .8rem;
    text-align: left;
    padding: .5rem 1rem;
}

.form-input {
    border-radius: 5px;
    padding: .8rem;
}

.form-input:last-child {
    margin-bottom: 0;
}

/* FOOTER */

#footer {
    background-color: hsl(229, 31%, 21%);
    color: white;
}

#footer a {
    color: white !important;
    letter-spacing: .1rem;
}

#footer a:hover {
    color: var(--soft-red) !important;
}

.icon-hover:hover {
    fill: red;
}

.social-links {
    display: flex;
    justify-content: center;
    gap: 3rem;
}

.attribution {
    font-size: 11px;
    text-align: center;
    position: relative;
    margin-top: 4rem;
}

.attribution a {
    color: hsl(228, 45%, 44%);
}

@media only screen and (min-width: 768px) {

    /* NAVBAR */
    #navbar {
        padding: 2rem 7rem;
    }

    .open-icon {
        display: none;
    }

    .links-menu-desktop {
        display: flex;
        align-items: center;
    }

    .links-menu-desktop .buttons {
        padding: .2rem 1.5rem;
        margin: 0;
        color: #fff;
    }

    /* BANNER */
    #banner {
        display: flex;
        flex-direction: row-reverse;
    }

    #banner .text-wrapper {
        text-align: left;
    }

    #banner .buttons-div {
        justify-content: flex-start;
    }

    #banner .buttons-div .buttons {
        margin: 0;
    }

    /* FEATURES */
    #features .text-wrapper {
        width: 100%;
        /* overflow: auto; */
    }

    .feature-list {
        display: flex;
        justify-content: space-between;
        border-top: 0;
        width: 120%;
        margin: 0 -10%;
    }

    .feature-list .list-item {
        border-bottom: 0;
    }

    .feature-wrapper .show {
        margin: 20px 30px 40px;
        display: flex;
    }

    .feature-wrapper .text-wrapper {
        text-align: left;
    }

    /* PRICING CARDS */
    .pricing-cards {
        flex-direction: row;
        align-items: normal;
        justify-content: center;
    }

    #chrome-card {
        margin-bottom: 100px;
    }

    #firefox-card {
        margin-top: 55px;
        margin-bottom: 55px;
    }

    #opera-card {
        margin-top: 100px;
    }


    /* CONTACT */
    #contact {
        padding: 40px;
    }

    .form {
        flex-direction: row;
        justify-content: center;
    }

    /* FOOTER */
    .footer-links {
        display: flex;
        flex-direction: row;
        align-items: center;
        padding: 0 100px;
    }

    .links-menu {
        margin: 0;
        flex-direction: row;
    }

    .attribution {
        margin-top: 4rem;
    }
}

